# trio-quicly

./: .gitignore  LICENSE  Makefile  NOTES-QUIC.md  NOTES-acks.md  NOTES-dev.md  README.md  README.rst  pyproject.toml  pytest.ini  quicly_specification.md  requirements.txt  setup.py  tox.ini
.github/workflows/: build-id.yml
examples/: echo_client.py  echo_quic_client.py  echo_quic_server.py  echo_server.py  http3_server.py
quicly/: __init__.py  acks.py  client.py  config.toml  config_loader.py  configuration.py  connection.py  crypto.py  endpoint.py  exceptions.py  frame.py  logger.py  packet.py  packetization.py  qlog.py  recovery.py  server.py  settings.py  stream.py  transport_defaults.toml  trio_timer.py  utils.py
src/trioquic/: __init__.py  _buffer.c  _crypto.c
tests/: __init__.py  test_acks.py  test_acks_roundtrip.py  test_config_e2e.py  test_config_ranges.py  test_configuration.py  test_connection.py  test_encoding.py  test_endpoints.py  test_frames.py  test_packet_number_tracker.py  test_packets.py  test_recovery_contextvars.py  test_transport_params.py  test_transport_params_defaults.py  test_transport_params_flags_and_config.py  test_trio_timer.py  tp_test.toml  tutils.py
trioquic/: client.py  configuration.py  connection.py  connection_new.py  crypto.py  endpoint.py  exceptions.py  frame.py  packet.py  server.py  stream.py  utils.py
